chore(fix-style): removed horizontal scroll by 400px

--- a/src/components/SortingList/SortingList.module.scss
+++ b/src/components/SortingList/SortingList.module.scss
@@ -90,3 +90,10 @@
     padding: 1rem;
   }
 }
+
+@media screen and (max-width: 450px) {
+  .aside {
+    margin-top: 44px;
+    padding: 0.5rem;
+  }
+}
