--- a/src/pages/Shop/ShopPage.module.scss
+++ b/src/pages/Shop/ShopPage.module.scss
@@ -42,7 +42,7 @@
 @media screen and (max-width: 450px) {
   .productsGrid {
     grid-template-columns: repeat(1, 1fr);
-    padding: 0 10px;
+    padding: 0 0px;
     gap: 20px;
   }
 }
